update response schema
